user contribution page for dashboard - displays a users posts and links to the moderation decision - replaces US page

--- a/Main/Source/BBC.Dna/BBC.DNA.csproj
+++ b/Main/Source/BBC.Dna/BBC.DNA.csproj
@@ -121,6 +121,7 @@
     <Compile Include="ContentSignifAdminBuilder.cs" />
     <Compile Include="ContentSignifSettings.cs" />
     <Compile Include="ContentSignifSettingsParameters.cs" />
+    <Compile Include="UserContributions.cs" />
     <Compile Include="HostDashboardActivityFeed.cs" />
     <Compile Include="HostDashboard.cs" />
     <Compile Include="SearchThreadPostPageBuilder.cs" />
