This is a mammoth check-in with all the changes and new files to support RiskMod in DNA and DNA Event Processor.
Because there are so many changes, I’ve checked in against the Product backlog item, because the check-in covers all the tasks associated with the PBI 1810.  I will write individual notes for the tasks as I close them so you know what was done to address the individual task

I’ve written notes for all files I’ve changed here so you know why the change relates to RiskMod (I’ve left off obviously changed files like project and solution files):
•	admin-newmod-sitemanager.xsl: Renamed RISKMODSTATE to RISKMODONOFF because it’s a better name as that’s what the drop down controls.
•	DBUpgradeScript.sql:  Added DateAssessed column to RiskModThreadEntryQueue table so that when a record is updated with a risk assessment, we know when that happened
•	Generatebievents.sql: Collects ET_POSTTOFORUM, ET_POSTNEEDSRISKASSESSMENT,  ET_MODERATIONDECISION_POST events, i.e. the events Risk Mod is interested in
•	Getbievents.sql: Added EventDate to all records.  Also collects colums needed to support ET_MODERATIONDECISION_POST events
•	Posttoforuminternal.sql: 
    - No longer relies on an error being thrown when inserting into the PostDuplicates table to detect a duplicate post.  Instead it explicitly checks for this case so it can cleanly return without rolling back the outer transaction (if there is one).
    - Added an extra check before entering the Risk Mod logic - @ignoremoderation = 0.  I.e. it will skip risk mod if @ignoremoderation = 1.  @ignoremoderation is set to 1 when a post is made by an editor or notable, or in any other circumstance when the post should skip any form of moderation.
    - If risk mod is triggered, and the post method is “A” (i.e. post after a risk assessment, just like a premoderated post), the output variable @ispremoderated is set to 1.  This tells the caller that the post will be processed in due course and allows the client to display an ap

--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/DnaEventProcessorService.csproj
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/DnaEventProcessorService.csproj
@@ -121,19 +121,24 @@
     <Compile Include="DnaEventProcessorServiceInstaller.Designer.cs">
       <DependentUpon>DnaEventProcessorServiceInstaller.cs</DependentUpon>
     </Compile>
-    <Compile Include="DnaEventProcessorHost.cs">
+    <Compile Include="DnaEventProcessorServiceHost.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="DnaEventProcessorHost.Designer.cs">
-      <DependentUpon>DnaEventProcessorHost.cs</DependentUpon>
+    <Compile Include="DnaEventProcessorServiceHost.Designer.cs">
+      <DependentUpon>DnaEventProcessorServiceHost.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\BBC.Dna.Data\BBC.Dna.Data.csproj">
       <Project>{F79CF818-D597-4C2F-A61D-87773951E234}</Project>
       <Name>BBC.Dna.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BIEventProcessor\BIEventProcessor.csproj">
+      <Project>{62069631-68F4-4E8D-B9D4-3835A7BEF4F9}</Project>
+      <Name>BIEventProcessor</Name>
     </ProjectReference>
     <ProjectReference Include="..\DnaEventService.Common\DnaEventService.Common.csproj">
       <Project>{8A8A0013-4D42-46FF-A0F9-5B844BBF42CE}</Project>
@@ -153,7 +158,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="BBC.Dna.snk" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -213,4 +220,9 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PreBuildEvent>sc stop dnaeventprocessorservice</PreBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
 </Project>
