--- a/Main/Source/Windows Services/DnaEventsService/BIEventProcessor/BIEventProcessor.csproj
+++ b/Main/Source/Windows Services/DnaEventsService/BIEventProcessor/BIEventProcessor.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{62069631-68F4-4E8D-B9D4-3835A7BEF4F9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BIEventProcessor</RootNamespace>
+    <RootNamespace>Dna.BIEventSystem</RootNamespace>
     <AssemblyName>BIEventProcessor</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -62,24 +62,62 @@
     <AssemblyOriginatorKeyFile>BBC.Dna.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Reference DLLs\EnterpriseLibrary\Microsoft.Practices.EnterpriseLibrary.Logging.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Web.Entity" />
     <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data.DataSetExtensions">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BIEvent.cs" />
     <Compile Include="BIEventProcessor.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="BIEventProcessorLogUtility.cs" />
+    <Compile Include="BIPostModerationDecisionEvent.cs" />
+    <Compile Include="ITheGuideSystem.cs" />
+    <Compile Include="TheGuideSystem.cs" />
+    <Compile Include="BIPostNeedsRiskAssessmentEvent.cs" />
+    <Compile Include="BIPostToForumEvent.cs" />
+    <Compile Include="IRiskModSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RiskModSystem.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\BBC.Dna.Data\BBC.Dna.Data.csproj">
+      <Project>{F79CF818-D597-4C2F-A61D-87773951E234}</Project>
+      <Name>BBC.Dna.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DnaEventService.Common\DnaEventService.Common.csproj">
+      <Project>{8A8A0013-4D42-46FF-A0F9-5B844BBF42CE}</Project>
+      <Name>DnaEventService.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Windows.Installer.3.1">
+      <Visible>False</Visible>
+      <ProductName>Windows Installer 3.1</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
