--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService.IntegrationTests/App.config
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService.IntegrationTests/App.config
@@ -11,84 +11,80 @@
       <section name="SNeSEventProcessorConsoleHost.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />-->
     </sectionGroup>
   </configSections>
+
   <loggingConfiguration name="Logging Application Block" tracingEnabled="true"
-    defaultCategory="General" logWarningsWhenNoCategoriesMatch="true">
+    defaultCategory="" logWarningsWhenNoCategoriesMatch="false">
     <listeners>
-      <add fileName="trace.log" header="----------------------------------------"
-        footer="----------------------------------------" formatter="MethodTracing Formatter"
-        listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
-        traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
-        name="FlatFile TraceListener" />
-      <add fileName="exmoderationprocessor.requests.log" header="----------------------------------------"
-        footer="----------------------------------------" formatter="Requests"
-        listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
-        traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
-        name="ExModerationProcessor.Requests" />
-      <add fileName="exmoderationprocessor.responses.log" header="----------------------------------------"
-        footer="----------------------------------------" formatter="Responses"
-        listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
-        traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
-        name="ExModerationProcessor.Responses" />
-      <add source="Enterprise Library Logging" formatter="Responses"
+      <add fileName="Logs\BIEventProcessor\BIEventProcessor.log" footer=""
+        formatter="Standard Text Formatter" header="----------------------------------------"
+        rollFileExistsBehavior="Overwrite" rollInterval="Hour" rollSizeKB="1024"
+        timeStampPattern="yyyy-MM-dd-HH-mm-ss" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
+        traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
+        name="BIEventProcessor Trace Listener" />
+      <add source="Enterprise Library Logging" formatter="Verbose Text Formatter"
         log="Application" machineName="" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
         traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
-        name="Formatted EventLog TraceListener" />
-      <add fileName="snesactivityprocessor.requests.log" footer="----------------------------------------"
-        formatter="Requests" header="----------------------------------------"
+        name="Formatted EventLog Trace Listener" />
+      <add fileName="Logs\ExModerationProcessor\exmoderationprocessor.log"
+        footer="" formatter="Standard Text Formatter" header="----------------------------------------"
         rollFileExistsBehavior="Overwrite" rollInterval="Hour" rollSizeKB="1024"
-        timeStampPattern="yyyy-MM-dd" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
+        timeStampPattern="yyyy-MM-dd-HH-mm-ss" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
         traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
-        name="SnesActivityProcessor.Requests" />
-      <add fileName="snesactivityprocessor.responses.log" footer="----------------------------------------"
-        formatter="Responses" header="----------------------------------------"
-        rollFileExistsBehavior="Overwrite" rollInterval="None" rollSizeKB="0"
-        timeStampPattern="yyyy-MM-dd" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
+        name="ExModerationProcessor Trace Listener" />
+      <add fileName="Logs\SnesActivityProcessor\snesactivityprocessor.log"
+        footer="" formatter="Standard Text Formatter" header="----------------------------------------"
+        rollFileExistsBehavior="Overwrite" rollInterval="Hour" rollSizeKB="1024"
+        timeStampPattern="yyyy-MM-dd-HH-mm-ss" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
         traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
-        name="SnesActivityProcessor.Responses" />
-      <add listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.WmiTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
-        traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.WmiTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
-        name="WMI TraceListener" />
+        name="SnesActivityProcessor Trace Listener" />
     </listeners>
     <formatters>
-      <add template="Timestamp: {timestamp}&#xD;&#xA;Message: {message}&#xD;&#xA;Category: {category}&#xD;&#xA;Priority: {priority}&#xD;&#xA;EventId: {eventid}&#xD;&#xA;Severity: {severity}&#xD;&#xA;Title:{title}&#xD;&#xA;Machine: {machine}&#xD;&#xA;Application Domain: {appDomain}&#xD;&#xA;Process Id: {processId}&#xD;&#xA;Process Name: {processName}&#xD;&#xA;Win32 Thread Id: {win32ThreadId}&#xD;&#xA;Thread Name: {threadName}&#xD;&#xA;Method: {property(MethodName)}&#xD;&#xA;Call Time: {property(CallTime)}&#xD;&#xA;Extended Properties: {dictionary({key} - {value}, property(MethodName)&#xD;&#xA;)}"
-        type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
-        name="MethodTracing Formatter" />
       <add template="Timestamp: {timestamp}&#xD;&#xA;Message: {message}&#xD;&#xA;Category: {category}&#xD;&#xA;Priority: {priority}&#xD;&#xA;EventId: {eventid}&#xD;&#xA;Severity: {severity}&#xD;&#xA;Title:{title}&#xD;&#xA;Machine: {machine}&#xD;&#xA;Application Domain: {appDomain}&#xD;&#xA;Process Id: {processId}&#xD;&#xA;Process Name: {processName}&#xD;&#xA;Win32 Thread Id: {win32ThreadId}&#xD;&#xA;Thread Name: {threadName}&#xD;&#xA;Extended Properties: {dictionary({key} - {value}&#xD;&#xA;)}"
         type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
-        name="Requests" />
-      <add template="Timestamp: {timestamp}&#xD;&#xA;Message: {message}&#xD;&#xA;Category: {category}&#xD;&#xA;Priority: {priority}&#xD;&#xA;EventId: {eventid}&#xD;&#xA;Severity: {severity}&#xD;&#xA;Title:{title}&#xD;&#xA;Machine: {machine}&#xD;&#xA;Application Domain: {appDomain}&#xD;&#xA;Process Id: {processId}&#xD;&#xA;Process Name: {processName}&#xD;&#xA;Win32 Thread Id: {win32ThreadId}&#xD;&#xA;Thread Name: {threadName}&#xD;&#xA;Extended Properties: {dictionary({key} - {value}&#xD;&#xA;)}"
+        name="Verbose Text Formatter" />
+      <add template="Timestamp: {timestamp}&#xD;&#xA;Message: {message}&#xD;&#xA;Category: {category}&#xD;&#xA;Severity: {severity}&#xD;&#xA;{dictionary({key}: {value}&#xD;&#xA;)}"
         type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.1.0.0, Culture=neutral, PublicKeyToken=54b8fe30038faf0d"
-        name="Responses" />
+        name="Standard Text Formatter" />
     </formatters>
     <categorySources>
-      <add switchValue="All" name="ExModerationProcessor.Responses">
+      <add switchValue="All" name="BIEventProcessor">
         <listeners>
-          <add name="ExModerationProcessor.Responses" />
+          <add name="BIEventProcessor Trace Listener" />
+        </listeners>
+      </add>
+      <add switchValue="All" name="BIEventProcessor.Exceptions">
+        <listeners>
+          <add name="BIEventProcessor Trace Listener" />
+        </listeners>
+      </add>
+      <add switchValue="All" name="ExModerationProcessor.Exceptions">
+        <listeners>
+          <add name="ExModerationProcessor Trace Listener" />
         </listeners>
       </add>
       <add switchValue="All" name="ExModerationProcessor.Requests">
         <listeners>
-          <add name="ExModerationProcessor.Requests" />
+          <add name="ExModerationProcessor Trace Listener" />
         </listeners>
       </add>
-      <add switchValue="All" name="General">
+      <add switchValue="All" name="ExModerationProcessor.Responses">
         <listeners>
-          <add name="Formatted EventLog TraceListener" />
+          <add name="ExModerationProcessor Trace Listener" />
         </listeners>
       </add>
-      <add switchValue="All" name="MethodTracing">
+      <add switchValue="All" name="SnesActivityProcessor.Exceptions">
         <listeners>
-          <add name="FlatFile TraceListener" />
+          <add name="SnesActivityProcessor Trace Listener" />
         </listeners>
       </add>
       <add switchValue="All" name="SnesActivityProcessor.Requests">
         <listeners>
-          <add name="SnesActivityProcessor.Requests" />
+          <add name="SnesActivityProcessor Trace Listener" />
         </listeners>
       </add>
       <add switchValue="All" name="SnesActivityProcessor.Responses">
         <listeners>
-          <add name="SnesActivityProcessor.Responses" />
+          <add name="SnesActivityProcessor Trace Listener" />
         </listeners>
       </add>
     </categorySources>
@@ -97,11 +93,12 @@
       <notProcessed switchValue="All" name="Unprocessed Category" />
       <errors switchValue="All" name="Logging Errors &amp; Warnings">
         <listeners>
-          <add name="Formatted EventLog TraceListener" />
+          <add name="Formatted EventLog Trace Listener" />
         </listeners>
       </errors>
     </specialSources>
   </loggingConfiguration>
+  
   <connectionStrings>
     <add name="DnaEventProcessorService.Properties.Settings.guideConnectionString"
       connectionString="Data Source=.;Initial Catalog=TheGuide;Integrated Security=True"
