--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/Properties/Settings.settings
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/Properties/Settings.settings
@@ -2,19 +2,19 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="DnaEventProcessorService.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="activityProcessingPeriod" Type="System.Int32" Scope="Application">
+    <Setting Name="SnesActivityProcessor_Interval" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">2000</Value>
     </Setting>
-    <Setting Name="SnesActivityProcessor_certificateName" Type="System.String" Scope="Application">
+    <Setting Name="SnesActivityProcessor_CertificateName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">DNA</Value>
     </Setting>
-    <Setting Name="guideConnectionString" Type="(Connection string)" Scope="Application">
+    <Setting Name="ConnectionString_TheGuide" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=.\sqlserver2005;Initial Catalog=smallGuide;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=.;Initial Catalog=theGuide;Integrated Security=True;Application Name=DnaEventProcessorService&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=.\sqlserver2005;Initial Catalog=smallGuide;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=.;Initial Catalog=theGuide;Integrated Security=True;Application Name=DnaEventProcessorService</Value>
     </Setting>
     <Setting Name="snesBaseUri" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">http://localhost</Value>
@@ -22,8 +22,36 @@
     <Setting Name="proxyAddress" Type="System.String" Scope="Application">
       <Value Profile="(Default)">http://www-cache.reith.bbc.co.uk:80</Value>
     </Setting>
-    <Setting Name="ExModerationProcessor_certificateName" Type="System.String" Scope="Application">
+    <Setting Name="ExModerationProcessor_CertificateName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">DNA</Value>
+    </Setting>
+    <Setting Name="ConnectionString_RiskMod" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=.;Initial Catalog=RiskMod;Integrated Security=True;Application Name=DnaEventProcessorService&lt;/ConnectionString&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=.;Initial Catalog=RiskMod;Integrated Security=True;Application Name=DnaEventProcessorService</Value>
+    </Setting>
+    <Setting Name="SnesOn" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="ExModOn" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="BIEventsOn" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="BIEventsProcessor_Interval" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">2000</Value>
+    </Setting>
+    <Setting Name="BIEventsProcessor_DisableRiskMod" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="SiteEventsOn" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="DebugOn" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
