Fix for thread ratings function tests

--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
@@ -97,7 +97,7 @@
   </loggingConfiguration>
   <connectionStrings>
     <add name="DnaEventProcessorService.Properties.Settings.ConnectionString_TheGuide"
-      connectionString="Data Source=.;Initial Catalog=theGuide;Integrated Security=True;Application Name=DnaEventProcessorService"
+      connectionString="Data Source=vp-dev-dna-db1\sql2005;Initial Catalog=newGuide;user id=sa; password=b0x0ftr1cks;Application Name=DnaEventProcessorService"
       providerName="System.Data.SqlClient" />
     <add name="DnaEventProcessorService.Properties.Settings.ConnectionString_RiskMod"
       connectionString="Data Source=.;Initial Catalog=RiskMod;Integrated Security=True;Application Name=DnaEventProcessorService" />
@@ -136,7 +136,7 @@
         <value>False</value>
       </setting>
       <setting name="BIEventsOn" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="BIEventsProcessor_Interval" serializeAs="String">
         <value>2000</value>
@@ -145,7 +145,7 @@
         <value>False</value>
       </setting>
       <setting name="SiteEventsOn" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="DebugOn" serializeAs="String">
         <value>True</value>
