Added sliding window expiry to major caching objects Added appsetting to set sliding window length

--- a/Main/Web.config
+++ b/Main/Web.config
@@ -66,6 +66,9 @@
     <add key="SecondaryMemcachedServer" value="10.161.68.132:11211" />
     <!-- Maintence Mode enabled (1) or disabled (0) -->
     <add key="MaintenanceMode" value="0"/>
+    <!-- The length in minutes to cache items to the default cache manager -->
+    <add key="CacheSlidingWindow" value="5"/>
+    
   </appSettings>
   <system.web>
 
