New ReviewForum API tests and schemas Fixes for user permissions for Add Delete Friends Block User and Block User Subscriptions Add applyskin flag to calls that return forumthread posts Fix posttojournal for journal thread creation Addition of lastpostcountread to postlist for conversations Fix for ForumSource to only return the article when requested Entity element transform

--- a/Main/Source/Schemas/Schemas.csproj
+++ b/Main/Source/Schemas/Schemas.csproj
@@ -146,6 +146,7 @@
     <None Include="Dna.Services.Common\subscribingUsersList.xsd" />
     <None Include="Dna.Services.Common\userSubscriptionsList.xsd" />
     <None Include="Dna.Services.Forums\forumSource.xsd" />
+    <None Include="Dna.Services.Forums\reviewForumPage.xsd" />
     <None Include="Dna.Services.Users\friendsList.xsd" />
     <None Include="Dna.Services.Users\group.xsd" />
     <None Include="Dna.Services.Users\user.xsd" />
