reference fixes to selenium project

--- a/Main/Tests/Selenium.Tests/Selenium.Tests.csproj
+++ b/Main/Tests/Selenium.Tests/Selenium.Tests.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MBBoardsV2.cs" />
+    <Compile Include="SeleniumTestHarness.cs" />
     <Compile Include="ThreadSearch.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -72,10 +73,6 @@
     <ProjectReference Include="..\..\Source\Shared\BBC.Dna.Utils\BBC.Dna.Utils.csproj">
       <Project>{52E9F388-5ED0-4D9C-9A7D-53F92EA21D1D}</Project>
       <Name>BBC.Dna.Utils %28Source\Shared\BBC.Dna.Utils\BBC.Dna.Utils%29</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Source\Shared\TestUtils\TestUtils.csproj">
-      <Project>{E09BF891-7D4F-403E-B830-B9E2606D2C22}</Project>
-      <Name>TestUtils</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
