--- a/Main/Tests/Selenium.Tests/Selenium.Tests.csproj
+++ b/Main/Tests/Selenium.Tests/Selenium.Tests.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{E12ED49B-620B-427B-8ECE-7CA804174EE3}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -57,6 +57,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomBarlesque.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MBBoardsV2.cs" />
     <Compile Include="SeleniumTestHarness.cs" />
