Supports the new setting BIEventsProcessor_RecordRiskModDecisionsOnPost, that when set to True in the config, records the risk value for each post in the system.  It's a boolean value that gets recorded in the new table, RiskModDecisionsForThreadEntries, in TheGuide database.  With this table, we'll be able to inform clients what the system thought was risky and not risky, without them committing to turning RiskMod for real.
I've added all the tests needed for 100% code coverage of the BI Event service

Also in this check-in are changes that were needed since Marcus changed the serialization calls in StringUtils to return Streams rather that Strings.  These were very simple changes that just call wrapper methods that do exactly what the old calls used to do

--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1317,6 +1317,7 @@
     <None Include="riskmod_getsitestate.sql" />
     <None Include="riskmod_postriskmodthreadentrytoforum.sql" />
     <None Include="riskmod_processriskassessmentforthreadentry.sql" />
+    <None Include="riskmod_recordriskmoddecisionforthreadentry.sql" />
     <None Include="riskmod_setsitestate.sql" />
     <None Include="createsitedailysummaryreport.sql" />
     <None Include="updatesitedefaultskin.sql" />
