--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/Properties/Settings.settings
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/Properties/Settings.settings
@@ -38,19 +38,22 @@
     <Setting Name="ExModOn" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="BIEventsOn" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">True</Value>
-    </Setting>
     <Setting Name="BIEventsProcessor_Interval" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">2000</Value>
     </Setting>
     <Setting Name="BIEventsProcessor_DisableRiskMod" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="SiteEventsOn" Type="System.Boolean" Scope="Application">
+    <Setting Name="DebugOn" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="BIEventsProcessor_RecordRiskModDecisionsOnPost" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="BIEventsOn" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="DebugOn" Type="System.Boolean" Scope="Application">
+    <Setting Name="SiteEventsOn" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
