Fix to scout recommends a scout belongs to the scouts group Returns YourLastPostIndex for a users conversations now Returns the newly created thread post when creating
Adds in the new Article API method SubmitSubbedEntry returns a sub edited entry to the editors part of the peer review publish function
Return defaultCanRead Write flags in forum thread posts

--- a/Main/Source/Shared/BBC.Dna.Objects/BBC.Dna.Objects.csproj
+++ b/Main/Source/Shared/BBC.Dna.Objects/BBC.Dna.Objects.csproj
@@ -120,6 +120,7 @@
     <Compile Include="SiteStatistics.cs" />
     <Compile Include="SmileyTranslator.cs" />
     <Compile Include="SoloGuideEntries.cs" />
+    <Compile Include="SubmitSubbedEntry.cs" />
     <Compile Include="SubscribingUsersList.cs" />
     <Compile Include="ThreadPostSummary.cs" />
     <Compile Include="ForumHelper.cs" />
