first version of addthread port - add to forum - refactored forum api code - new builder - modified tests to use new builder instead of addthread (forum tests) - removed c++ based forum tests - new unit and functional tests for new builder - added post frequency code to posttoforum code -

--- a/Main/Source/BBC.Dna/BBC.DNA.csproj
+++ b/Main/Source/BBC.Dna/BBC.DNA.csproj
@@ -125,6 +125,7 @@
     <Compile Include="ContentSignifAdminBuilder.cs" />
     <Compile Include="ContentSignifSettings.cs" />
     <Compile Include="ContentSignifSettingsParameters.cs" />
+    <Compile Include="PostToForumBuilder.cs" />
     <Compile Include="UserContributions.cs" />
     <Compile Include="HostDashboardActivityFeed.cs" />
     <Compile Include="HostDashboard.cs" />
