--- a/Main/Tests/FunctionalTests.DnaPages/FunctionalTests.DnaPages.csproj
+++ b/Main/Tests/FunctionalTests.DnaPages/FunctionalTests.DnaPages.csproj
@@ -255,10 +255,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Addthread.cs" />
     <Compile Include="BBC.Dna.BannedEmailsTests.cs" />
     <Compile Include="cachingSignals\groupSignalTests.cs" />
     <Compile Include="ArticlePageTests.cs" />
+    <Compile Include="PostToForumTests.cs" />
     <Compile Include="SiteManagerTests.cs" />
     <Compile Include="MBAdmin.cs" />
     <Compile Include="ModerateHomePageTests.cs" />
