Front page redirector and mbfrontpage builders

--- a/Main/Source/BBC.Dna/BBC.DNA.csproj
+++ b/Main/Source/BBC.Dna/BBC.DNA.csproj
@@ -125,6 +125,8 @@
     <Compile Include="ContentSignifAdminBuilder.cs" />
     <Compile Include="ContentSignifSettings.cs" />
     <Compile Include="ContentSignifSettingsParameters.cs" />
+    <Compile Include="MBFrontPage.cs" />
+    <Compile Include="FrontPageRedirector.cs" />
     <Compile Include="PostToForumBuilder.cs" />
     <Compile Include="UserContributions.cs" />
     <Compile Include="HostDashboardActivityFeed.cs" />
