--- a/Main/Source/Shared/BBC.Dna.Objects/BBC.Dna.Objects.csproj
+++ b/Main/Source/Shared/BBC.Dna.Objects/BBC.Dna.Objects.csproj
@@ -87,6 +87,7 @@
     <Compile Include="ArticleInfoReferencesUser.cs" />
     <Compile Include="Contribution.cs" />
     <Compile Include="Contributions.cs" />
+    <Compile Include="FrontPageTopicElementList.cs" />
     <Compile Include="FollowersList.cs" />
     <Compile Include="ReviewForumPage.cs" />
     <Compile Include="SearchThreadPost.cs">
