--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
@@ -154,6 +154,9 @@
       <setting name="SiteEventsOn" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="BIEventsProcessor_NumThreads" serializeAs="String">
+        <value>32</value>
+      </setting>
     </DnaEventProcessorService.Properties.Settings>
     <!--<SNeSEventProcessor.Properties.Settings>
       <setting name="activityProcessingPeriod" serializeAs="String">
