Changed logging to use the logging levels "Information" and "Verbose", so the level of logging can be controlled from the config file

--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
@@ -44,7 +44,7 @@
         name="Standard Text Formatter" />
     </formatters>
     <categorySources>
-      <add switchValue="All" name="BIEventProcessor">
+      <add switchValue="Information" name="BIEventProcessor">
         <listeners>
           <add name="BIEventProcessor Trace Listener" />
         </listeners>
