more proj changes

--- a/Main/Source/Web Services/BBC.DNA.Services.Moderation/BBC.DNA.Services.Moderation.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Services.Moderation/BBC.DNA.Services.Moderation.csproj
@@ -130,10 +130,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="configurations\Web.config" />
     <Content Include="Global.asax" />
     <Content Include="status.aspx" />
     <Content Include="version.aspx" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="configurations\Web.config.sample" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
