Added logic to take the editor and superusers can override canwrite flag

--- a/Main/Source/Shared/BBC.Dna.Objects.Tests/BBC.Dna.Objects.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Objects.Tests/BBC.Dna.Objects.Tests.csproj
@@ -81,6 +81,7 @@
     <Compile Include="BlockedUserSubscriptionsListTest.cs" />
     <Compile Include="CategorySummaryTest.cs" />
     <Compile Include="ContributionTest.cs" />
+    <Compile Include="PostThreadFormTests.cs" />
     <Compile Include="FrontPageTopicElementListTests.cs" />
     <Compile Include="ExtraInfoCreatorTest.cs" />
     <Compile Include="FollowersListTest.cs" />
