Auditing of editpost - c# version - refactor of moderation objects - increased auditing of edit post actions

--- a/Main/Source/Shared/BBC.Dna.Moderation.Tests/BBC.Dna.Moderation.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Moderation.Tests/BBC.Dna.Moderation.Tests.csproj
@@ -92,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BannedEmailsTests.cs" />
+    <Compile Include="ModerationPostsTests.cs" />
     <Compile Include="ModeratorInfoTests.cs" />
     <Compile Include="SiteSummaryStatsTests.cs" />
     <Compile Include="EMailInsertsTests.cs" />
