--- a/Main/Source/Databases/The Guide/TheGuide.Database.UnitTests/TheGuide.Database.UnitTests.csproj
+++ b/Main/Source/Databases/The Guide/TheGuide.Database.UnitTests/TheGuide.Database.UnitTests.csproj
@@ -45,6 +45,9 @@
     <Reference Include="System.Transactions" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="getmoderationpostsmostrecentfirstTests.cs" />
+    <Compile Include="getmoderationpostsfastmodfirstTests.cs" />
+    <Compile Include="getmoderationpostsTests.cs" />
     <Compile Include="CreateNewSiteTests.cs" />
     <Compile Include="GetIndexOfComment.cs" />
     <Compile Include="GetModerationExLinks.cs" />
