Adding ability to remove items from the fast mod after x items

--- a/Main/Source/Databases/The Guide/TheGuide.Database.UnitTests/TheGuide.Database.UnitTests.csproj
+++ b/Main/Source/Databases/The Guide/TheGuide.Database.UnitTests/TheGuide.Database.UnitTests.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Transactions" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="trg_Threadmod_uTest.cs" />
     <Compile Include="getmoderationpostsmostrecentfirstTests.cs" />
     <Compile Include="getmoderationpostsfastmodfirstTests.cs" />
     <Compile Include="getmoderationpostsTests.cs" />
