Added new SP createpostingevents

--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -250,6 +250,7 @@
     <None Include="CreateNewUserGroup.sql" />
     <None Include="createnewuserwithBBCUID.sql" />
     <None Include="createnewvote.sql" />
+    <None Include="createpostingevents.sql" />
     <None Include="createpremodpostingentry.sql" />
     <None Include="createprivateforum.sql" />
     <None Include="createroute.sql" />
