Migrating to production

--- a/Production/Source/Databases/The Guide/TheGuide.Database.UnitTests/TheGuide.Database.UnitTests.csproj
+++ b/Production/Source/Databases/The Guide/TheGuide.Database.UnitTests/TheGuide.Database.UnitTests.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Transactions" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="verifyuseragainstbannedipaddressTests.cs" />
+    <Compile Include="updatetrackedmemberlistTests.cs" />
     <Compile Include="trg_Threadmod_uTest.cs" />
     <Compile Include="getmoderationpostsmostrecentfirstTests.cs" />
     <Compile Include="getmoderationpostsfastmodfirstTests.cs" />
