--- a/Production/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Production/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1278,6 +1278,10 @@
     <None Include="addTermsFilterUpdate.sql" />
     <None Include="addTermsFilterTerm.sql" />
     <None Include="commentratingcreate.sql" />
+    <None Include="addbannedusersipaddress.sql" />
+    <None Include="updatetrackedmemberlistinternal.sql" />
+    <None Include="verifyuseragainstbannedipaddress.sql" />
+    <None Include="removebannedusersipaddress.sql" />
     <None Include="getuserevents.sql" />
     <None Include="InsertUserPostEvents.sql" />
     <None Include="getmoderationpostsfastmodfirst.sql" />
