--- a/Main/Source/Shared/BBC.Dna.Moderation.Tests/BBC.Dna.Moderation.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Moderation.Tests/BBC.Dna.Moderation.Tests.csproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BannedEmailsTests.cs" />
+    <Compile Include="UserReputationTests.cs" />
     <Compile Include="ModerationPostsTests.cs" />
     <Compile Include="ModeratorInfoTests.cs" />
     <Compile Include="SiteSummaryStatsTests.cs" />
@@ -115,6 +116,10 @@
     <ProjectReference Include="..\BBC.Dna.Data\BBC.Dna.Data.csproj">
       <Project>{F79CF818-D597-4C2F-A61D-87773951E234}</Project>
       <Name>BBC.Dna.Data %28Source\Shared\BBC.Dna.Data\BBC.Dna.Data%29</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BBC.DNA.Moderation.Utils\BBC.DNA.Moderation.Utils.csproj">
+      <Project>{8EB8245F-927C-469B-9DBB-4BAED2A9F420}</Project>
+      <Name>BBC.DNA.Moderation.Utils %28Source\Shared\BBC.Dna.Moderation.Utils\BBC.DNA.Moderation.Utils%29</Name>
     </ProjectReference>
     <ProjectReference Include="..\BBC.Dna.Moderation\BBC.Dna.Moderation.csproj">
       <Project>{ED8FAD29-DC4F-40DC-A275-45D215591FA2}</Project>
