--- a/Main/Source/Shared/BBC.Dna.Moderation.Utils.Tests/BBC.Dna.Moderation.Utils.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Moderation.Utils.Tests/BBC.Dna.Moderation.Utils.Tests.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ModerationStatusTests.cs" />
     <Compile Include="ProfanityFilterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
