--- a/Main/Source/Web Services/BBC.DNA.Services.Comments/BBC.DNA.Services.Comments.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Services.Comments/BBC.DNA.Services.Comments.csproj
@@ -165,6 +165,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="configurations\Web.config.sample" />
+    <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
