--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -975,6 +975,7 @@
     <None Include="nntpsetforumdatecreated.sql" />
     <None Include="nntpsetgroup.sql" />
     <None Include="numberinindex.sql" />
+    <None Include="openemailaddresskey.sql" />
     <None Include="performclubaction.sql" />
     <None Include="performsearch.sql" />
     <None Include="pollanonymouscontentratingvote.sql" />
