--- a/Main/Source/Databases/The Guide/triggers/triggers.csproj
+++ b/Main/Source/Databases/The Guide/triggers/triggers.csproj
@@ -41,9 +41,11 @@
     <None Include="trg_GuideEntries_d.sql" />
     <None Include="trg_GuideEntries_i.sql" />
     <None Include="trg_GuideEntries_u.sql" />
+    <None Include="trg_ThreadEntriesIPAddress_iu.sql" />
     <None Include="trg_Topics_iu.sql" />
     <None Include="trg_Forums_u.sql" />
     <None Include="trg_Threads_iu.sql" />
+    <None Include="trg_Users_iu.sql" />
   </ItemGroup>
   <!--<Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />-->
 </Project>
